# mirage

./: .gitmodules  CMakeLists.txt  Makefile  README.md
client/: CMakeLists.txt  client.cpp  client.h  main.cpp
client/render/: render.cpp  render.h  window.cpp  window.h
core/: ecs.h  event.h  graphics.h  json.h  mirage.h  network.h  packet.h  processing.h  signal.h  utility.h
include/SDL/: CMakeLists.txt
include/boost_1_78_0/boost/predef/hardware/: simd.h
include/boost_1_78_0/boost/predef/hardware/simd/x86/: versions.h
server/: CMakeLists.txt  client.cpp  client.h  config.h  main.cpp  server.cpp  server.h
server/game/: client.cpp  client.h  game.h
test/: CMakeLists.txt  ecs.h  main.cpp  serialization.h
